examples/test/testpolicy15099.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15099
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key15: value10
      key16: value48
      key28: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value18
          key14: value30
          key16: value25
      podSelector:
        matchLabels:
          key42: value28
          key46: value6
